2003-12-16  graydon hoare  <graydon@pobox.com>

	* lua.cc (working_copy_rcfilename): MT/monotonerc not MT/.monotonerc.

2003-12-16  graydon hoare  <graydon@pobox.com>

	* lua.hh, lua.cc (working_copy_rcfilename): New function.
	* monotone.cc: Add working copy rcfiles.
	* commands.cc (ls_unknown, unknown_itemizer): Skip ignored files.

2003-12-16  graydon hoare  <graydon@pobox.com>

	* file_io.cc (walk_tree_recursive): continue on book-keeping file.

2003-12-15  graydon hoare  <graydon@pobox.com>

	* tests/t_unidiff.at, t_unidiff2.at: Check for mimencode.

2003-12-15  graydon hoare  <graydon@pobox.com>

	* configure.ac: Add --enable-static-boost.
	* Makefile.am: Likewise.
	* AUTHORS: Mention new contributors.

2003-12-14  Lorenzo Campedelli <lorenzo.campedelli@libero.it>

	* work.cc (add_to_attr_map): Finish change to attr map format.
 
2003-12-05  graydon hoare  <graydon@pobox.com>

	* lcs.hh (edit_script): New entry point.
	* diff_patch.cc: Rewrite merge in terms of edit scripts.
	* network.cc (post_queued_blobs_to_network): Tidy up transient
	failure message.
	* randomfile.hh: Prohibit deletes on end of chunks.
	* sanity.cc: EOL-terminate truncated long lines.

2003-12-02  graydon hoare  <graydon@pobox.com>

	* database.cc, database.hh (reverse_queue): Copy constructor.
	* std_hooks.lua (merge3): Remove afile, not ancestor.
	* monotone.cc: Remove debugging message.
	* ui.cc (finish_ticking): Set last_write_was_a_tick to false.

2003-12-01  graydon hoare  <graydon@pobox.com>

	* app_state.hh, app_state.cc (set_signing_key): New fn, persist key.
	* monotone.cc (cpp_main): Permit commuting the --help argument around.

2003-11-28  Tom Tromey  <tromey@redhat.com>

	* http_tasks.cc (check_received_bytes): Allow "-" as well.
	* depot.cc (execute_post_query): Allow "-" as well.

2003-11-30  graydon hoare  <graydon@pobox.com>

	* network.cc (post_queued_blobs_to_network): Fail when posted_ok is false.
	* database.cc (initialize): Fail when -journal file exists.